--- a/MNIST_EWC.ipynb
+++ b/MNIST_EWC.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "import os\n",
     "# Disable GPU in a case of kernel freezing\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\""
+    "#os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\""
    ]
   },
   {
@@ -72,12 +72,11 @@
    },
    "outputs": [],
    "source": [
-    "num_epoch = 20\n",
+    "num_epoch = 20 # number of epochs\n",
     "num_neur = 400 # number of neurons in hidden layers\n",
-    "num_class = 10\n",
-    "img_line = 784\n",
-    "#vspl = 0.2\n",
-    "bsize = 32"
+    "num_class = 10 # number of classes\n",
+    "img_line = 784 # input dimension\n",
+    "bsize = 32 # batch size"
    ]
   },
   {
@@ -157,7 +156,7 @@
    ],
    "source": [
     "order_all = np.random.permutation(img_line)\n",
-    "tr_a = X_train[:,order_all]\n",
+    "tr_a = X_train[:,order_all] # permute pixels in the images\n",
     "ts_a = X_test[:,order_all]\n",
     "\n",
     "score_a = np.zeros((num_epoch*3,2))\n",
@@ -260,24 +259,7 @@
    "outputs": [],
    "source": [
     "lam = 150 # importance of old task\n",
-    "# def reg_w_l0(weight_matrix): # regularization for weights in layer #0\n",
-    "#     return (lam/2) * K.sum(K.dot(K.square(weight_matrix-w_star_l0),K.transpose(Fisher[0])))\n",
-    "# def reg_b_l0(weight_matrix): # regularization for biases in layer #0\n",
-    "#     theta2 = K.expand_dims(K.square(weight_matrix-b_star_l0))\n",
-    "#     F = K.expand_dims(K.constant(Fisher[1]))\n",
-    "#     return (lam/2) * K.sum(theta2*F)\n",
-    "# def reg_w_l1(weight_matrix): # regularization for weights in layer #1\n",
-    "#     return (lam/2) * K.sum(K.dot(K.square(weight_matrix-w_star_l1),K.transpose(Fisher[2])))\n",
-    "# def reg_b_l1(weight_matrix): # regularization for biases in layer #1\n",
-    "#     theta2 = K.expand_dims(K.square(weight_matrix-b_star_l1))\n",
-    "#     F = K.expand_dims(K.constant(Fisher[3]))\n",
-    "#     return (lam/2) * K.sum(theta2*F)\n",
-    "# def reg_w_l2(weight_matrix): # regularization for weights in layer #2\n",
-    "#     return (lam/2) * K.sum(K.dot(K.square(weight_matrix-w_star_l2),K.transpose(Fisher[4])))\n",
-    "# def reg_b_l2(weight_matrix): # regularization for biases in layer #2\n",
-    "#     theta2 = K.expand_dims(K.square(weight_matrix-b_star_l2))\n",
-    "#     F = K.expand_dims(K.constant(Fisher[5]))\n",
-    "#     return (lam/2) * K.sum(theta2*F)\n",
+    "\n",
     "def reg_w_l0(weight_matrix): # regularization for weights in layer #0\n",
     "    return (lam/2) * K.sum(K.square(weight_matrix-w_star_l0)*Fisher[0])\n",
     "def reg_b_l0(weight_matrix): # regularization for biases in layer #0\n",
@@ -402,8 +384,8 @@
     "\n",
     "plt.plot(score_a[:num_epoch*2,0],score_a[:num_epoch*2,1],label='A')\n",
     "plt.plot(score_b[:num_epoch,0],score_b[:num_epoch,1],label='B')\n",
-    "plt.xlabel('Эпоха обучения')\n",
-    "plt.ylabel('Аккуратность')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -566,8 +548,8 @@
     "plt.plot(score_a[:,0],score_a[:,1],label='A')\n",
     "plt.plot(score_b[:,0],score_b[:,1],label='B')\n",
     "plt.plot(score_c[:,0],score_c[:,1],label='C')\n",
-    "plt.xlabel('Эпоха обучения')\n",
-    "plt.ylabel('Аккуратность')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -578,7 +560,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez('EWC_9',score_a=score_a,score_b=score_b,score_c=score_c)"
+    "# Save training trends if necessary\n",
+    "#np.savez('EWC_9',score_a=score_a,score_b=score_b,score_c=score_c)"
    ]
   }
  ],
