Added experiments on Fashion-MNIST

--- a/Dreams_(f)MNIST_plain.ipynb
+++ b/Dreams_(f)MNIST_plain.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The test is performed on MNIST data.\n",
+    "The test is performed on MNIST and Fashion-MNIST data.\n",
     "\n",
-    "In \"plain\" version, all auxiliary cod is removed\n",
+    "In \"plain\" version, all auxiliary code is removed\n",
     "\n",
     "**Warning**: dreams generation is extremely slow"
    ]
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "from keras.datasets import mnist\n",
+    "from keras.datasets import mnist, fashion_mnist\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras import utils\n",
@@ -94,7 +94,12 @@
    },
    "outputs": [],
    "source": [
-    "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
+    "# Load training datasets\n",
+    "dataset = 1 # '0' or '1' for MNIST or Fashion-MNIST\n",
+    "if dataset == 0:\n",
+    "    (X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
+    "else:\n",
+    "    (X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()"
    ]
   },
   {
@@ -545,6 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save training history for further processing\n",
     "#np.savez('Dreams_0',score_a=score_a,score_ab=score_ab,score_abc=score_abc)"
    ]
   },
